# searchprobe

./: .env.example  .gitignore  README.md  modal_app.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: searchprobe_analysis.ipynb
profiles/: example.toml  full_test.toml  negation_deep_dive.toml
site/: index.html  script.js  style.css  wrangler.jsonc
src/aris/: __init__.py
src/aris/agent/: evaluator.py  reformulator.py  search_agent.py
src/aris/api/: app.py  middleware.py  models.py  routes.py
src/aris/benchmark/: adapter.py  reporter.py  runner.py
src/aris/cli/: app.py
src/aris/core/: config.py  exceptions.py  models.py  protocols.py
src/aris/index/: content_extractor.py  dense_store.py  document.py  ingestion.py  manager.py  sparse_store.py  structured_store.py
src/aris/que/: engine.py  entities.py  failure_predictor.py  models.py  negation.py  numeric.py  parser.py  strategy.py  temporal.py
src/aris/ranking/: confidence.py  constraint_scorer.py  cross_encoder.py  diversity.py  engine.py  score_fusion.py
src/aris/retrieval/: decomposer.py  dense.py  engine.py  fusion.py  hyde.py  negation_filter.py  sparse.py  structured.py
src/aris/sources/: base.py  brave.py  cache.py  duckduckgo.py  registry.py  serpapi.py  web.py
src/aris/verification/: boolean.py  domain.py  engine.py  entity.py  models.py  negation.py  numeric.py  temporal.py
src/searchprobe/: __init__.py  __main__.py
src/searchprobe/adversarial/: __init__.py  bandit.py  crossover.py  fitness.py  models.py  mutations.py  optimizer.py
src/searchprobe/cli/: __init__.py  app.py  dashboard.py  evaluate.py  evolve.py  generate.py  geometry.py  perturb.py  report.py  run.py  session.py  validate.py
src/searchprobe/compute/: __init__.py  modal_runner.py
src/searchprobe/config/: __init__.py  settings.py
src/searchprobe/core/: __init__.py  config.py  exceptions.py  protocols.py  signals.py
src/searchprobe/core/adapters/: __init__.py  evolution_adapter.py  geometry_adapter.py  perturbation_adapter.py  validation_adapter.py
src/searchprobe/dashboard/: __init__.py  app.py
src/searchprobe/dashboard/pages/: category_deep_dive.py  embedding_geometry.py  failure_analysis.py  overview.py  provider_comparison.py  query_explorer.py  robustness.py  validation.py
src/searchprobe/evaluation/: __init__.py  dimensions.py  judge.py  prompts.py  statistics.py
src/searchprobe/geometry/: __init__.py  analyzer.py  metrics.py  models.py  pairs.py  vulnerability.py
src/searchprobe/intelligence/: __init__.py  correlation.py  ground_truth.py  models.py  session.py  taxonomy.py
src/searchprobe/perturbation/: __init__.py  engine.py  models.py  operators.py  stability.py
src/searchprobe/pipeline/: __init__.py  cost_tracker.py  rate_limiter.py  runner.py
src/searchprobe/providers/: __init__.py  base.py  brave.py  exa.py  models.py  registry.py  resilient.py  serpapi.py  tavily.py
src/searchprobe/queries/: __init__.py  generator.py  models.py  seeds.py  taxonomy.py  templates.py
src/searchprobe/reporting/: __init__.py  charts.py  generator.py
src/searchprobe/storage/: __init__.py  async_db.py  database.py
src/searchprobe/utils/: __init__.py  logging.py  parsing.py
src/searchprobe/validation/: __init__.py  cross_encoder.py  gap_analysis.py  models.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_pipeline.py
tests/unit/: test_bandit.py  test_circuit_breaker.py  test_config_profile.py  test_correlation.py  test_cost_tracker.py  test_crossover.py  test_database.py  test_dimensions.py  test_exceptions.py  test_ground_truth.py  test_judge.py  test_mutations.py  test_optimizer.py  test_parsing.py  test_rate_limiter.py  test_resilient_provider.py  test_session.py  test_signals.py  test_statistics.py  test_taxonomy.py  test_taxonomy_classify.py
