[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "searchprobe"
version = "0.1.0"
description = "Adversarial benchmark framework for neural search engines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SearchProbe Contributors" }
]
keywords = ["search", "benchmark", "adversarial", "neural-search", "exa", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Search Provider SDKs
    "exa-py>=1.0",
    "tavily-python>=0.5",
    "google-search-results>=2.4",
    "httpx>=0.27",

    # CLI
    "typer[all]>=0.12",
    "rich>=13.0",

    # Data & Validation
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    # LLM Clients
    "anthropic>=0.39",
    "openai>=1.40",

    # Database
    "aiosqlite>=0.19",

    # Analysis & Visualization
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.1",
    "plotly>=5.18",

    # Dashboard
    "streamlit>=1.38",

    # Reporting
    "jinja2>=3.1",

    # Async & Resilience
    "tenacity>=8.2",

    # Configuration
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
searchprobe = "searchprobe.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/searchprobe"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
